@@ -1,7 +1,9 @@
 INCLUDES = $(GTK_CFLAGS)
 LDADD = $(GTK_LIBS)
 
-noinst_PROGRAMS = buttonbox
+noinst_PROGRAMS = \
+	buttonbox \
+	treeview
 
 CLEANFILES = engines
 MAINTAINERCLEANFILES = Makefile.in
@@ -14,4 +16,14 @@ EXTRA_DIST = \
 	images/hbbox-tb.png \
 	images/hbbox-tlb.png \
 	images/hbbox-tlbr.png \
+	treeview.c \
+	treeview.gtkrc \
+	images/treeview-active.png \
+	images/treeview-active-alone.png \
+	images/treeview-active-left.png \
+	images/treeview-active-middle.png \
+	images/treeview-active-right.png \
+	images/treeview-normal.png \
+	images/treeview-passive.png \
+	images/treeview-selected.png \
 	run-demo
